changed ractivejs.org to ractive.js.org (as well as github name)

--- a/shared/partials/nav.html
+++ b/shared/partials/nav.html
@@ -1,6 +1,6 @@
 <nav>
 	<div class='nav-inner'>
-		<a<%= id === 'index' ? ' class="selected"' : '' %> href='http://ractivejs.org'>Ractive.js</a>
+		<a<%= id === 'index' ? ' class="selected"' : '' %> href='http://ractive.js.org'>Ractive.js</a>
 		<a class='github-wide' href='https://github.com/ractivejs/ractive'>GitHub</a>
 		<button id='nav-toggle'>&#9776;</button>
 	</div>
