--- a/docs/0.4.0/Get started.md.hbs
+++ b/docs/0.4.0/Get started.md.hbs
@@ -4,8 +4,8 @@ title: Get started
 
 Welcome! These pages aim to provide all the information you need to master Ractive.
 
-If you see something wrong, out of date, or missing from this documentation, please [raise an issue on GitHub](https://github.com/ractivejs/docs.ractivejs.org/issues) or - even better - submit a pull request. Your fellow Ractive users will thank you!
+If you see something wrong, out of date, or missing from this documentation, please [raise an issue on GitHub](https://github.com/ractivejs/v0.x/issues) or - even better - submit a pull request. Your fellow Ractive users will thank you!
 
-A good way to get up and running is with the [60 second setup](http://ractivejs.org/60-second-setup). After that, working your way through the [interactive tutorials](http://learn.ractivejs.org) will familiarise you with the various ways you can use Ractive.
+A good way to get up and running is with the [60 second setup](http://ractive.js.org/60-second-setup). After that, working your way through the [interactive tutorials](http://learn.ractive.js.org) will familiarise you with the various ways you can use Ractive.
 
 If you get stuck at any point, visit the {{{createLink 'Get support'}}} page to find help.
