--- a/templates/0.8/page.hbs
+++ b/templates/0.8/page.hbs
@@ -41,7 +41,7 @@
 
 	<%= footer %>
 
-	<%= analytics("UA-5602942-6","ractivejs.org") %>
+	<%= analytics("UA-5602942-6","ractive.js.org") %>
 
 	<script src='../assets/nav.js'></script>
 
